# quicklaunch

./: .gitignore  README.md  index.html  package-lock.json  package.json
docs/: README_V0.5.md  Summarize.md  tutorial.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppIcon.tsx  Footer.tsx  PinBoard.tsx  ResultList.tsx  SearchBar.tsx  SettingsPanel.tsx
src/hooks/: useApps.ts  useKeyboard.ts  usePins.ts  useSettings.ts
src/styles/: app.css  global.css
