[package]
name = "quicklaunch"
version = "0.1.0"
description = "QuickLaunch - A lightweight app launcher for Windows 11"
authors = ["you"]
edition = "2021"

[lib]
name = "quicklaunch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "quicklaunch"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
